[gd_scene load_steps=15 format=3 uid="uid://d1sa06tckcsoy"]

[ext_resource type="Script" path="res://Scenes/ui/party_panel.gd" id="1_0ohyd"]
[ext_resource type="Resource" uid="uid://cojtu0lyxlxfo" path="res://Resources/Characters/Player.tres" id="2_qmqxg"]
[ext_resource type="Texture2D" uid="uid://dfnnioxksktmb" path="res://Graphics/units/party/player/attack_stance.png" id="3_xhkiw"]
[ext_resource type="SpriteFrames" uid="uid://pptrq6podwf" path="res://Graphics/units/party/player/player_sprite_frames.tres" id="4_gqvqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkb3q"]
bg_color = Color(0, 0, 0, 0.552941)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.175897, 3.68621e-05, 0.191514, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_xutdj"]
outline_size = 3
outline_color = Color(0.511823, 0.00163933, 0.714915, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1wdj4"]
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x1tvu"]
bg_color = Color(0.559526, 0, 0, 0.392157)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yr5ty"]
bg_color = Color(0.787542, 4.16331e-06, 5.77569e-07, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_p44w6"]
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpb72"]
bg_color = Color(0.000767204, 0.239722, 0.813736, 0.392157)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nkhch"]
bg_color = Color(0, 0.301961, 1, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tm3gc"]
bg_color = Color(0.332368, 0.00133736, 0.600691, 0.392157)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_da4od"]
bg_color = Color(0.387459, 0.00183898, 0.692855, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[node name="PartyPanel" type="CenterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -90.0
offset_right = 60.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.992674, 0.997322)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0ohyd")
party_member = ExtResource("2_qmqxg")

[node name="Visuals" type="Control" parent="."]
custom_minimum_size = Vector2(120, 180)
layout_mode = 2

[node name="Panel" type="Panel" parent="Visuals"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qkb3q")

[node name="MarginContainer" type="MarginContainer" parent="Visuals"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.995671)
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Visuals/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Name" type="Label" parent="Visuals/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Party Member"
label_settings = SubResource("LabelSettings_xutdj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Placeholder" type="TextureRect" parent="Visuals/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(110, 95)
layout_mode = 2
texture = ExtResource("3_xhkiw")
expand_mode = 5
stretch_mode = 4

[node name="Sprite" type="AnimatedSprite2D" parent="Visuals/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
position = Vector2(55.4354, 69.5143)
scale = Vector2(1.41409, 1.41409)
sprite_frames = ExtResource("4_gqvqk")
frame_progress = 0.13865

[node name="VBoxContainer" type="VBoxContainer" parent="Visuals/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Health" type="HBoxContainer" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HP" type="Label" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 10
text = "HP:"
label_settings = SubResource("LabelSettings_1wdj4")

[node name="ProgressBar" type="ProgressBar" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Health"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_x1tvu")
theme_override_styles/fill = SubResource("StyleBoxFlat_yr5ty")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Health"]
layout_mode = 2
text = "100/100"
label_settings = SubResource("LabelSettings_p44w6")

[node name="Mana" type="HBoxContainer" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MP" type="Label" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Mana"]
layout_mode = 2
size_flags_horizontal = 10
text = "MP:"
label_settings = SubResource("LabelSettings_1wdj4")
horizontal_alignment = 1

[node name="ProgressBar2" type="ProgressBar" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Mana"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_bpb72")
theme_override_styles/fill = SubResource("StyleBoxFlat_nkhch")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Mana"]
layout_mode = 2
text = "100/100"
label_settings = SubResource("LabelSettings_p44w6")

[node name="Experience" type="HBoxContainer" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EXP" type="Label" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Experience"]
layout_mode = 2
size_flags_horizontal = 10
text = "EXP:"
label_settings = SubResource("LabelSettings_1wdj4")

[node name="ProgressBar2" type="ProgressBar" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Experience"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_tm3gc")
theme_override_styles/fill = SubResource("StyleBoxFlat_da4od")
value = 60.0
show_percentage = false

[node name="Label" type="Label" parent="Visuals/MarginContainer/VBoxContainer/VBoxContainer/Experience"]
layout_mode = 2
text = "100/100"
label_settings = SubResource("LabelSettings_p44w6")

[connection signal="gui_input" from="Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="Visuals" to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="Visuals" to="." method="_on_visuals_mouse_exited"]
